@@ -87,12 +87,10 @@ message FragmentProto {
 }
 
 message FileFragmentProto {
-	required string id = 1;
-	required string path = 2;
-	required int64 startOffset = 3;
-	required int64 length = 4;
-	optional TableStatsProto stats = 5;
-  optional bool distCached = 6 [default = false];
+  required string id = 1;
+  required string path = 2;
+  required int64 startOffset = 3;
+  required int64 length = 4;
   repeated string hosts = 7;
   repeated int32 diskIds = 8;
 }
