@@ -136,12 +136,11 @@ public class QueryUnit implements EventHandler<TaskEvent> {
 
   public void setDataLocations(FileFragment fragment) {
     String[] hosts = fragment.getHosts();
-    int[] blockCount = fragment.getHostsBlockCount();
     int[] volumeIds = fragment.getDiskIds();
     this.dataLocations = new ArrayList<DataLocation>(hosts.length);
 
     for (int i = 0; i < hosts.length; i++) {
-      this.dataLocations.add(new DataLocation(hosts[i], blockCount[i], volumeIds[i]));
+      this.dataLocations.add(new DataLocation(hosts[i], volumeIds[i]));
     }
   }
 
@@ -531,21 +530,15 @@ public class QueryUnit implements EventHandler<TaskEvent> {
 
   public static class DataLocation {
     private String host;
-    private int blockCount; // for Non-Splittable
     private int volumeId;
 
-    public DataLocation(String host, int blockCount, int volumeId) {
+    public DataLocation(String host, int volumeId) {
       this.host = host;
-      this.blockCount = blockCount;
       this.volumeId = volumeId;
     }
 
     public String getHost() {
       return host;
-    }
-
-    public int getBlockCount() {
-      return blockCount;
     }
 
     public int getVolumeId() {
@@ -556,7 +549,6 @@ public class QueryUnit implements EventHandler<TaskEvent> {
     public String toString() {
       return "DataLocation{" +
           "host=" + host +
-          ", blocks=" + blockCount +
           ", volumeId=" + volumeId +
           '}';
     }
